--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,69 +1,91 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
+@layer base {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@layer components {
+  .fc-tailwind {
+    @apply border-transparent;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .fc-tailwind .fc .fc-resource-timeline-divider {
+    width: 0 !important;
+  }
+
+  .fc-tailwind .fc-datagrid-cell-cushion .fc-tailwind .fc-datagrid-cell-main,
+  .fc .fc-datagrid-cell-cushion {
+    @apply m-0;
+    padding: 0 !important;
+    width: 100% !important;
+  }
+
+  .fc-tailwind .fc-scrollgrid {
+    @apply border-l-transparent;
+  }
+
+  .fc-tailwind tbody .fc-scroller-harness {
+    @apply border-l border-r border-slate-300;
+  }
+
+  .fc-tailwind .fc-timeline-header-row-chrono .fc-timeline-slot-frame {
+    @apply justify-center font-prompt text-base text-gray-500 font-normal;
+  }
+
+  .fc-tailwind .fc-theme-standard td,
+  .fc-theme-standard th {
+    @apply border-transparent;
+  }
+
+  .fc-tailwind-container .fc .fc-toolbar.fc-header-toolbar {
+    @apply mb-0;
+    padding-left: 22rem;
+  }
+
+  .fc-tailwind-container .fc .fc-scroller-liquid-absolute {
+    background-color: white !important;
+  }
+
+  .fc-tailwind-container .fc .fc-timeline-body {
+    @apply bg-[#F5F5F5] !important;
+  }
+
+  .fc-tailwind-container .fc .fc-toolbar-title {
+    @apply text-2xl font-semibold text-gray-500;
+  }
+
+  .fc-tailwind-container .fc .fc-button-primary {
+    @apply bg-transparent text-gray-500 text-base w-32 transition focus: bg-brand-primary-50 font-semibold hover:bg-brand-primary-50 border-x-transparent border-4 border-t-transparent border-b-transparent hover:border-b-brand-primary hover:border-b-4;
+  }
+
+  .fc-tailwind-container .fc .fc-button-primary:not(:disabled):active,
+  .fc .fc-button-primary:not(:disabled).fc-button-active {
+    @apply border-b-4 border-b-brand-primary bg-transparent text-black border-x-transparent border-t-transparent;
+  }
+
+  .fc-tailwind-container .fc .fc-button-primary:not(:disabled):active:focus,
+  .fc-tailwind-container .fc .fc-button-primary:not(:disabled).fc-button-active:focus {
+    @apply shadow-none bg-brand-primary-50;
+  }
+
+  .fc-tailwind-container .fc .fc-button-primary:focus {
+    @apply shadow-none;
+  }
+
+  .fc-tailwind-container .fc .fc-timeline-slot-minor {
+    @apply border-hidden;
+  }
+
+  .fc-tailwind-container .fc .fc-resource-timeline-divider {
+    pointer-events: none;
+    opacity: 0;
   }
 }
